2009-09-29  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Surface.cs: Remove empty dtor and dead code.

	r: jackson

2009-09-29  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Kind.cs: Regenerated.
	
        r: alan, spouliot

2009-09-25  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* NativeDependencyObjectHelper.cs: Lock all accesses to the objects
	hash table.

	r: andreia

2009-09-25  Sebastien Pouliot  <sebastien@ximian.com> 

	* GeneratedPInvokes: regen.

	r: andreia

2009-09-23  Chris Toshok  <toshok@ximian.com>

	* NativeDependencyObjectHelper.cs (AddNativeMapping): add more
	info to the spew.
	(CreateObject): enable MouseButtonEventArgs creation since we now
	have a Kind for it.

	* Events.cs: fix the FIXME, and treat MouseButtonEventArgs the
	same as the other routedeventargs subclasses (i.e. NDOH.FromIntPtr
	?? new MouseButtonEventArgs)

	* GeneratedPInvokes.cs, Kind.cs: regen.

	r: lewing

2009-09-23  Chris Toshok  <toshok@ximian.com>

	* NativeDependencyObjectHelper.cs (AddNativeMapping): if there's a
	conflict in DEBUG builds, throw an exception.  otherwise write it
	out to the console. return false if we didn't create a toggle
	ref (because either native == 0 or we'd already created a
	toggleref for this object.)
	(Lookup): cast to INativeEventObjectWrapper, not
	INativeDependencyObjectWrapper.  This gets eventargs working.
	(CreateObject): add cases for the EventObject-derived
	EventArgs-subclasses.
	
	* EventHandlerList.cs: stop using the System.ComponentModel
	implementation, use a
	Dictionary<int,Dictionary<int,EventHandlerData>> subclass.  This
	is just used to keep refs to delegates so that they aren't
	collected while they're registered with unmanaged-land.

	* DispatcherTimer.cs: remove autogenerated events.

	r: spouliot, andriea

2009-09-18  Jackson Harper  <jackson@ximian.com>

	* XamlLoaderCallbacks.cs: Use flags for validating tempaltes and
	importing the default xmlns now.

2009-09-17  Jeffrey Stedfast  <fejj@novell.com>
